Fix #6 SHMU Radar and Aladin should be bigger on smaller screens
Also:
- get rid of ul and li HTML tags
- rename modul shmu_scrapper to shmu_scraper
- README.txt

--- a/static/all.css
+++ b/static/all.css
@@ -4,21 +4,26 @@ body {
     font-size: 16px;
 }
 
-main {
+content {
     margin: auto;
     width: 85%;
 }
 
 iframe {
     width: 100%;
-    height: 300px;
+    height: auto;
     border: none;
 }
 
-nav ul {
+#aladin_img {
+    width: min(100%, 58rem);
+    height: auto;
+    border: 1px solid;
+}
+
+nav {
     display: flex;
     flex-direction: row;
-    padding: 0.5rem 1rem;
     gap: 0px;
     list-style-type: none;
     width: 100%;
@@ -27,12 +32,13 @@ nav ul {
     background-color: #333;
 }
 
-nav li {
+nav a {
+  padding: 0.5rem 0;
   margin: 0;
   float: left;
 }
 
-nav li a {
+nav a {
   display: block;
   color: white;
   text-align: center;
@@ -41,16 +47,16 @@ nav li a {
   border-radius: 5px;
 }
 
-nav li a:hover:not(.active) {
+nav a:hover:not(.active) {
   background-color: DarkRed;
 }
 
-nav li .active {
+nav a .active {
   background-color: #111;
 }
 
 #schedules_table {
-    margin: 50px 0;
+    margin: 50px 1em;
 }
 
 #schedules_table .separator {
@@ -73,13 +79,11 @@ nav li .active {
     color:  #595959;
     margin: 0;
     padding-left: 0.75rem;
-    /*text-transform: uppercase; */
 }
 
 
 #schedules_table .content {
     padding-left: 0.7rem;
-    /*line-height: 2rem; */
     padding: 1.2rem;
 }
 
